--- a/src/components/score-creator/score-creator.html
+++ b/src/components/score-creator/score-creator.html
@@ -33,7 +33,10 @@
                 <td class="tg-0pky"><input ng-model="$ctrl.score.rounds[0].score3" maxlength="2" size="1" /></td>
                 <td class="tg-0pky">{{$ctrl.one_one_three}}</td>
                 <td class="tg-0pky" rowspan="2">{{$ctrl.one_six}}</td>
-                <td class="tg-0pky" rowspan="4"><i class="fa-solid fa-bullseye"></i></td>
+                <td class="tg-0pky" rowspan="4">
+                    <i class="fa-solid fa-bullseye"></i>
+                    <!-- <target></target> -->
+                </td>
             </tr>
             <tr>
                 <td class="tg-0pky"><input ng-model="$ctrl.score.rounds[1].score1" maxlength="2" size="1" /></td>
@@ -62,7 +65,10 @@
                 <td class="tg-0pky"><input ng-model="$ctrl.score.rounds[4].score3" maxlength="2" size="1" /></td>
                 <td class="tg-0pky">{{$ctrl.three_one_three}}</td>
                 <td class="tg-0pky" rowspan="2">{{$ctrl.three_six}}</td>
-                <td class="tg-0pky" rowspan="4"><i class="fa-solid fa-bullseye"></i></td>
+                <td class="tg-0pky" rowspan="4">
+                    <i class="fa-solid fa-bullseye"></i>
+                    <!-- <target></target> -->
+                </td>
             </tr>
             <tr>
                 <td class="tg-0pky"><input ng-model="$ctrl.score.rounds[5].score1" maxlength="2" size="1" /></td>
@@ -91,7 +97,10 @@
                 <td class="tg-0pky"><input ng-model="$ctrl.score.rounds[8].score3" maxlength="2" size="1" /></td>
                 <td class="tg-0pky">{{$ctrl.five_one_three}}</td>
                 <td class="tg-0pky" rowspan="2">{{$ctrl.five_six}}</td>
-                <td class="tg-0pky" rowspan="4"><i class="fa-solid fa-bullseye"></i></td>
+                <td class="tg-0pky" rowspan="4">
+                    <i class="fa-solid fa-bullseye"></i>
+                    <!--<target></target>-->
+                </td>
             </tr>
             <tr>
                 <td class="tg-0pky"><input ng-model="$ctrl.score.rounds[9].score1" maxlength="2" size="1" /></td>
