--- a/src/components/score-creator/score-creator.html
+++ b/src/components/score-creator/score-creator.html
@@ -113,17 +113,16 @@
                 <td class="tg-0pky"><input ng-model="$ctrl.score.rounds[10].score1" maxlength="2" size="1" type="number" min="0" max="11" /></td>
                 <td class="tg-0pky"><input ng-model="$ctrl.score.rounds[10].score2" maxlength="2" size="1" type="number" min="0" max="11" /></td>
                 <td class="tg-0pky"><input ng-model="$ctrl.score.rounds[10].score3" maxlength="2" size="1" type="number" min="0" max="11" /></td>
-                <td class="tg-0pky">{{$ctrl.score.rounds[10].score1 + $ctrl.score.rounds[10].score2 + $ctrl.score.rounds[10].score3}}</td>
+                <td class="tg-0pky">{{$ctrl.six_one_three}}</td>
                 <td class="tg-0pky" rowspan="2">
-                    {{$ctrl.score.rounds[9].score1 + $ctrl.score.rounds[9].score2 + $ctrl.score.rounds[9].score3 + $ctrl.score.rounds[10].score1 + $ctrl.score.rounds[10].score2 +
-                    $ctrl.score.rounds[10].score3}}
+                    {{$ctrl.six_six}}
                 </td>
             </tr>
             <tr>
                 <td class="tg-0pky"><input ng-model="$ctrl.score.rounds[11].score1" maxlength="2" size="1" type="number" min="0" max="11" /></td>
                 <td class="tg-0pky"><input ng-model="$ctrl.score.rounds[11].score2" maxlength="2" size="1" type="number" min="0" max="11" /></td>
                 <td class="tg-0pky"><input ng-model="$ctrl.score.rounds[11].score3" maxlength="2" size="1" type="number" min="0" max="11" /></td>
-                <td class="tg-0pky">{{$ctrl.score.rounds[11].score1 + $ctrl.score.rounds[11].score2 + $ctrl.score.rounds[11].score3}}</td>
+                <td class="tg-0pky">{{$ctrl.five_two_three}}</td>
             </tr>
         </tbody>
         <tfoot>
