--- a/src/components/score-alt/score-alt.html
+++ b/src/components/score-alt/score-alt.html
@@ -5,7 +5,7 @@
         <p>{{$ctrl.score.date | toDate | date:'mediumDate'}} at {{$ctrl.score.weather}} for a distance of {{$ctrl.score.distance}} against a target size of {{$ctrl.score.target}} </p>
     </div>
 
-    <table class="tg">
+    <table class="table-alt-score tg">
         <thead>
             <tr>
                 <th class="tg-0lax" colspan="3"></th>
