--- a/src/components/score-alt/score-alt.component.css
+++ b/src/components/score-alt/score-alt.component.css
@@ -36,3 +36,28 @@
     text-align: left;
     vertical-align: top;
 }
+
+.gold {
+    background-color: gold;
+}
+
+.red {
+    background-color: red;
+}
+
+.blue {
+    background-color: blue;
+}
+
+.black {
+    background-color: black;
+    color: white;
+}
+
+.white {
+    background-color: white;
+}
+
+.green {
+    background-color: lightgreen;
+}
