--- a/src/components/score/score.html
+++ b/src/components/score/score.html
@@ -104,11 +104,8 @@
                 <td class="tg-0pky" ng-class="$ctrl.calculateScoreColour($ctrl.score.rounds[10].score1);">{{$ctrl.score.rounds[10].score1}}</td>
                 <td class="tg-0pky" ng-class="$ctrl.calculateScoreColour($ctrl.score.rounds[10].score2);">{{$ctrl.score.rounds[10].score2}}</td>
                 <td class="tg-0pky" ng-class="$ctrl.calculateScoreColour($ctrl.score.rounds[10].score3);">{{$ctrl.score.rounds[10].score3}}</td>
-                <td class="tg-0pky">{{$ctrl.score.rounds[10].score1 + $ctrl.score.rounds[10].score2 + $ctrl.score.rounds[10].score3}}</td>
-                <td class="tg-0pky" rowspan="2">
-                    {{$ctrl.score.rounds[9].score1 + $ctrl.score.rounds[9].score2 + $ctrl.score.rounds[9].score3 + $ctrl.score.rounds[10].score1 + $ctrl.score.rounds[10].score2 +
-                    $ctrl.score.rounds[10].score3}}
-                </td>
+                <td class="tg-0pky">{{$ctrl.six_one_three}}</td>
+                <td class="tg-0pky" rowspan="2">{{$ctrl.six_six}}</td>
             </tr>
             <tr>
                 <td class="tg-0pky" ng-class="$ctrl.calculateScoreColour($ctrl.score.rounds[11].score1);">{{$ctrl.score.rounds[11].score1}}</td>
